src/styles/preset.css
.main_layout {
  display: flex;
  justify-content: center;
  width: var(--main-w);
  margin: 0 auto;
  margin-top: var(--main-offset-top);
  transition: margin-top 0.7s cubic-bezier(0.4, 0, 0.2, 1);
  gap: 16px;
}

.main_layout:nth-child(1) {
  flex-shrink: 0;
}

.main_children {
  width: var(--post-w);
  flex-shrink: 0;
}

@media screen and (max-width: 960px) {
  .main_layout {
    flex-direction: column-reverse;
    padding: 0 4px;
    width: 100%;
  }
}

.link {
  color: var(--c-indigo-1);
  border-bottom: 1px dashed var(--c-gray-2);
  transition: border-color 250ms;
  word-break: break-all;

  &:hover {
    border-color: var(--c-green-1);
  }

  &:has(>code) {
    border-bottom-style: solid;
  }

  &>code {
    border-bottom-left-radius: 0 !important;
    border-bottom-right-radius: 0 !important;
  }
}

.fcc {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 4px;
}

.codeblock_split {
  border-right: 1px solid var(--divider);
}

@media screen and (max-width: 640px) {
  .codeblock_split {
    border-right: none;
    border-bottom: 1px solid var(--divider);
  }
}

.verticalLine {
  height: 0.8rem;
  width: 2px;
  border-radius: 2px;
  background-color: var(--bg-vertical-line);
}

.slashLine {
  height: 0.8rem;
  width: 2px;
  border-radius: 2px;
  background-color: var(--bg-vertical-line);
  transform: rotate(20deg);
  margin: 0 2px;
}

.keyboard_tag {
  font-size: var(--text-xs);
  color: var(--text-3);
  font-weight: 600;
  padding: 4px;
  background-color: var(--c-gray-soft);
  border-radius: 4px;
}

.load_ani {
  opacity: 0;
  animation: 0.3s fade-in-up forwards;
}

@keyframes fade-in-up {
  0% {
    transform: translateY(2rem);
    opacity: 0
  }

  to {
    transform: translateY(0);
    opacity: 1
  }
}

.main_content {
  position: relative;
  z-index: 9;
  background-color: var(--bg-card);
  border-radius: 12px;
  padding: 16px 36px;
}

